--- a/css/Components.css
+++ b/css/Components.css
@@ -1,6 +1,7 @@
 .movie-table {
     border-collapse: collapse;
     width: 100%; 
+    
 }
 .movie-table__link svg{
     display: none;
@@ -39,7 +40,7 @@
 .gal{
     fill: #A3CC40;;
 }
-.container{
+.container3{
     max-width: 850px;
     margin: 0 auto;
 }
@@ -83,9 +84,29 @@ tr {
 }
 
     
-.block01__menu{
+.line2{
     display: inline block;
-    margin-left: 280px;
-    line-height: 15px;
-    font-weight: 500;
+    margin-right: 44px;
+    margin-bottom: 15px;
+    line-height: 15.6px;
+    color: white;
+    text-transform: uppercase;
+   
+}
+.line2 a:hover{
+    transition: 1s;
+    border-bottom: 1px solid white;
+}
+.line1{
+    display: inline-block;
+    margin-right: 50px;
+    line-height: 15.6px;
+    margin-bottom: 15px;
+}
+
+.zagolovok1{
+    margin: 0 auto;
+    padding-bottom: 19px;
+    text-align: center;
+    margin-top: 131px;
 }
