--- a/pet/selectors.css
+++ b/pet/selectors.css
@@ -1,5 +1,6 @@
 body{
     background:  #6592CF;
+    
 }
 .block__qvadrat {
     background: #243D83;
@@ -17,4 +18,19 @@ body{
     border-bottom: 50px solid transparent;
    
    
+}
+.block01__kv {
+    background: saddlebrown;
+    margin: 250px 250px 250px 250px;
+    width: 350px;
+    height: 350px;
+    margin: 0 auto;
+}
+.block01__kv:before{
+    content: "";
+    display: block;
+   
+    border:50px 50px 0px 0px solid white;
+   
+
 }
