ТЗ 07-1 Наследование и Специфичность

--- a/css/layout.css
+++ b/css/layout.css
@@ -4,7 +4,8 @@ h2,h3,h4,h5,h6 {
     font-size: 48px;
     line-height: 62px;
     color: #A3CC40;
-    margin-left: 25px;
+    margin-bottom: 84px;
+ 
     
 
 }
