--- a/css/Components.css
+++ b/css/Components.css
@@ -43,6 +43,7 @@
 .container3{
     max-width: 850px;
     margin: 0 auto;
+    padding: 0 15px;
 }
 .table__checkbox input{
     display: none;
@@ -109,4 +110,18 @@ tr {
     padding-bottom: 19px;
     text-align: center;
     margin-top: 131px;
+}
+.block03__text1{
+    margin-bottom: 25px;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 26px;
+}
+.block03__text2{
+    font-weight: normal;
+    font-size: 11px;
+    line-height: 14px;
+}
+.block03__jpg{
+    margin-bottom: 35px;
 }
