--- a/css/main.css
+++ b/css/main.css
@@ -10,12 +10,16 @@
     margin-left: 200px;
     
 }
-.conteiner{
-    background: url(../images/zal.jpg); color: #161616;
+.container{
+    background: url(../images/Backgroound\ Picture.jpg); color: #161616;
+    background-position: center;
     min-height: 728px;
     width:100%;
+    display: inline-block;
+    
+
 }
-.conteiner__conteiner1{
+.container__container1{
     width: 947px;
     margin: 0 auto;
 }
@@ -37,19 +41,123 @@
     float: left;
     box-sizing: border-box;
     width: 33.33%;
-    margin: 0 auto ;
     text-align: center;
+    padding: 0 25px;
+    margin-bottom: 29px;
+   
+    
     
 }
-.row2{
-    float: left;
-    box-sizing: border-box;
-    width: 33.33%;
-    margin: 0 auto;
-    text-align: center;
-   
+.block03{
+    margin-right: -15px;
+    margin-left: -15px;
+    overflow: hidden;
+    margin-bottom: 144px;
 }
+.block06{
+    overflow: hidden;
+    margin-bottom: 79px;
+}
+.block06__bg{
+    float: left;
+    
+}
+.block06__movie1{
+    position: relative;
+    width: 33.33%;
+    float: left;
+    overflow: hidden;
+    cursor: pointer;
+}
+.block06__movie1:hover .block06__shadow{
+    opacity: 0;
 
+}
+.block06__movie1:hover .block06__descr{
+    transform: translate(0);
+    animation-delay: 0.3s;
+
+}
+.block06__shadow{
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    background: rgba(22, 22, 22, 0.8);
+    transition: 0.4s;
+}
+.block06__descr{
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    background: rgba(144, 210, 61, 0.4);
+    padding: 22px;
+    transform: translate(100%);
+    
+}
+.block06__text2{
+    font-weight: normal;
+    font-size: 11px;
+    line-height: 1.27;
+    color:  #FFFFFF;
+    margin-bottom: 13px;
+    
+}
+.block06__text1{
+    font-weight: 600;
+    font-size: 29px;
+    line-height: 1.3;
+    color:  #FFFFFF;
+
+}
+.block07__item img{
+    display: block;
+}
+.block07__item{
+    float: left;
+    width: 33.33%;
+    position: relative;
+    overflow: hidden;
+}
+.block07__common{
+    position: absolute;
+    right: 0;
+    left: 0;
+    top: 0;
+    bottom: 0;
+}
+.block07__bg{
+    background: rgba(163, 204, 64, 0.8);
+    position: absolute;
+    right: 0;
+    left: 0;
+    top: 173px;
+    bottom: -10px;
+    transform: skew(0, -20deg);
+
+}
+.block07__abs{
+    color:  #FFFFFF;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 1.3;
+    text-align: center;
+    padding: 250px 30px 30px;
+    position: relative;
+}
+.block07__goods{
+    overflow: hidden;
+}
+.block07__text1{
+    margin-bottom: 37px;
+    font-weight: normal;
+    font-size: 11px;
+    line-height: 1.3px;
+    min-width: 548px;
+}
 
     
     
