ТЗ 08-2 Блок "Подарок"

--- a/css/font.css
+++ b/css/font.css
@@ -1,27 +1,27 @@
 @font-face {
     font-family: 'IBM-Plex-Sans';
-    src: url('font/IBMPlexSans-Light.ttf');
+    src: url('../font/IBMPlexSans-Light.ttf');
     font-style: normal;
     font-weight: 100;
 }
 
 @font-face {
     font-family: 'IBM-Plex-Sans';
-    src: url('font/IBMPlexSans-Regular.ttf');
+    src: url('../font/IBMPlexSans-Regular.ttf');
     font-style: normal;
     font-weight: 400;
 }
 
 @font-face {
     font-family: 'IBM-Plex-Sans';
-    src: url('font/IBMPlexSans-Medium.ttf');
+    src: url('../font/IBMPlexSans-Medium.ttf');
     font-style: normal;
     font-weight: 500;
 }
 
 @font-face {
     font-family: 'IBM-Plex-Sans';
-    src: url('font/IBMPlexSans-SemiBold.ttf');
+    src: url('../font/IBMPlexSans-SemiBold.ttf');
     font-style: normal;
     font-weight: 600;
 }
