--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,10 @@
     margin-left: 200px;
     
 }
+.block02__wrap{
+    position: relative;
+
+}
 .block02{
     background: #FFFFFF;
     box-shadow: 0px 27px 39px rgba(163, 204, 64, 0.18);
@@ -17,11 +21,9 @@
     position: absolute;
     min-height: 221px;
     min-width: 426px;
-    left: 563px;
-    top: 600px;
-    margin-left: 150px;
-    margin-bottom: 97px;
-    
+    right: 0;
+    top: 0;
+    transform: translateY(-50%)
 }
 .block02__text1{
     font-style: normal;
@@ -90,14 +92,14 @@
     margin-bottom: 29px;
 }
 .block03{
-    margin-right: -15px;
-    margin-left: -15px;
+    margin-right: -25px;
+    margin-left: -25px;
     overflow: hidden;
     margin-bottom: 144px;
 }
 .block05{
     margin-bottom: 90px;
-    background:url("../images/present.jpg") no-repeat center / cover;
+    background:url("../images/presentblackout.jpg") no-repeat center / cover;
     overflow: hidden;
    
 }
@@ -236,6 +238,8 @@
     width: 33.33%;
     position: relative;
     overflow: hidden;
+    box-sizing: border-box;
+    padding: 0 25px
 }
 .block07__common{
     position: absolute;
@@ -250,7 +254,7 @@
     right: 0;
     left: 0;
     top: 173px;
-    bottom: -10px;
+    bottom: -40px;
     transform: skew(0, -20deg);
 
 }
@@ -276,8 +280,18 @@
     margin-bottom: 57px;
     max-width: 548px;
 }
+.block07__item img{
+    width: 100%; 
+}
+.block07__wrap{
+    position: relative;
+}
+.block07__list{
+    margin-right: -25px;
+    margin-left: -25px;
+}
 .block08{
-    background: url("../images/review.jpg") no-repeat center / cover;
+    background: url("../images/Group43.jpg") no-repeat center / cover;
     overflow: hidden;
     position: relative;
     padding-bottom: 143px;
@@ -290,18 +304,15 @@
     background: #97B13C;
     border-radius: 9px;
     width: 209.81px;
-    height: 284px;
-    left: 142.32px;
-    top: 4880.05px;
     margin-top: 89px;
 }
 .block08__bg1{
     background: url("../images/review1.jpg");
-    border-radius: 8.57901px 8.57901px 0px 0px;
+    border-radius: 9px 9px 0px 0px;
     width: 210px;
-    height: 152.71px;
-    left: 142.32px;
-    top: 4880.05px;
+    height: 153px;
+    left: 142px;
+    top: 4880px;
     margin-bottom: 17px;
 }
 .block08__text1{
@@ -351,24 +362,21 @@
 }
 .block08__review2{
     background: #97B13C;
-    border-radius: 10.0227px;
+    border-radius: 10px;
     width: 246px;
-    height: 332px;
-    left: 441.76px;
-    top: 4856px;
-
+    margin-bottom: 52px;
 }
 .block08__bg2{
     background: url("../images/review2.jpg");
-    width: 245.56px;
-    height: 178.54px;
-    left: 441.76px;
+    width: 245px;
+    height: 178px;
+    left: 441px;
     top: 4856px;
-    border-radius: 10.0227px 10.0227px 0px 0px;
+    border-radius: 10px 10px 0px 0px;
     margin-bottom: 17px;
 }
 .block08__descr2{
-    max-width: 220.4px;
+    max-width: 220px;
     margin: 0 auto;
 }
 .block08__text4{
@@ -385,15 +393,14 @@
     font-size: 11px;
     line-height: 1.3;
     color: #FFFFFF;
-    margin-bottom: 52px;
 }
 .block08__bg3{
     background: url("../images/review3.jpg");
-    border-radius: 8.55217px 8.55217px 0px 0px;
+    border-radius: 8px 8px 0px 0px;
     width: 210px;
-    height: 152.73px;
-    left: 776.47px;
-    top: 4881.06px;
+    height: 152px;
+    left: 776px;
+    top: 4881px;
     margin-bottom: 14px;
 }
 .block08__review3{
@@ -401,8 +408,8 @@
     border-radius: 9px;
     width: 210px;
     height: 284px;
-    left: 776.47px;
-    top: 4881.06px;
+    left: 776px;
+    top: 4881px;
     margin-top: 89px;
 
 }
@@ -427,4 +434,137 @@
     color: #FFFFFF;
     margin-bottom: 33px;
 }
+.block09{
+    background: #FFFFFF;
+    box-shadow: 8px 9px 39px rgba(185, 185, 185, 0.37);
+    border-radius: 20px;
+    max-width: 767px;
+    margin-left: 174px;
+    margin-right: 183px;
+    margin-bottom: 61px;
+    overflow: hidden;
+    width: 100%;
+}
+.block09__dscr{
+    max-width: 344px;
+    margin: 31px 42px 33px 381px;
+    width: 100%;
+}
+.block09__bg{
+    background:linear-gradient(270deg, #FFFFFF 12.2%, rgba(30, 30, 30, 0) 107.85%);  
+}
+.block09__text1{
+    margin-bottom: 20px;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 25px;
+    line-height: 1.3;
+    color: #A3CC40;
+}
+.block09__text2-name{
+    margin-bottom: 33px;
+    background: #DEDEDE;
+    border-radius: 5px;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 15px;
+    line-height: 1.3;
+    color: #A1A1A1;
+    border: #A1A1A1 ;
+}
+.block09__text3-places{
+    margin-bottom: 30px;
+    background: #DEDEDE;
+    border-radius: 5px;
+    border: #A1A1A1;
+    color: #A1A1A1;
 
+}
+.block09__text4-review{
+    margin-bottom: 29px;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 15px;
+    line-height: 1.3;
+    color: #A1A1A1;
+    background: #DEDEDE;
+    border-radius: 5px;
+    border: #A1A1A1
+
+}
+.block09__text5{
+    margin-bottom: 48px
+}
+.block09__text5-chekbox{
+    font-style: normal;
+    font-weight: normal;
+    font-size: 10px;
+    line-height: 1.3;
+    color: #333333;
+    border: #A1A1A1
+}
+.block09__text6{
+    background: #A3CC40;
+    border-radius: 6px;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.3;
+    color: #FFFFFF;
+    border: #A3CC40;
+}
+.block10{
+    margin: 0 auto;
+    max-width: 973px;
+}
+.block11{
+    width: 100%;
+    background: #A3CC40 no-repeat center;
+}
+.block11__footer{
+    overflow: hidden;
+    position: relative;
+}
+.block11__logo{
+    display: block;
+    max-width: 161px;
+    margin-bottom: 15px;
+}
+.block11__text1{
+    max-width: 269px;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 1.3;
+    color: #FFFFFF;
+    margin-bottom: 150px;
+
+}
+.block11__col1{
+    margin-left: 80px;
+    display: inline-block;
+}
+.block11__col2{
+    max-width: 111px;
+    margin-left: 171px;
+    display: inline-block;
+    position: absolute;
+    margin-top: 84px;
+}
+.block11__col3{
+    display: inline-block;
+    margin-left: 690px;
+    margin-right: 209px;
+    margin-top: 84px;
+    position: absolute;
+}
+.block11__saite{
+    margin-bottom: 22px;
+}
+.block11__saite-href li a{
+    margin-bottom: 12px;
+    max-width: 111px;
+}
+.block11_contact{
+    margin-bottom: 22px;
+}
