--- a/css/main.css
+++ b/css/main.css
@@ -88,7 +88,7 @@
     box-sizing: border-box;
     width: 33.33%;
     text-align: center;
-    padding: 0 25px;
+    padding: 0 24px;
     margin-bottom: 29px;
 }
 .block03{
@@ -175,6 +175,16 @@
     overflow: hidden;
     margin-bottom: 79px;
 }
+.films__text{
+    margin-bottom: 64px;
+    max-width: 548px;
+    font-style: normal; 
+    font-weight: normal;
+    font-size: 11px;
+    line-height: 14px;
+    color: #333333;
+
+}
 .block06__bg{
     float: left;
     
@@ -254,7 +264,7 @@
     right: 0;
     left: 0;
     top: 173px;
-    bottom: -40px;
+    bottom: -45px;
     transform: skew(0, -20deg);
 
 }
@@ -295,6 +305,7 @@
     overflow: hidden;
     position: relative;
     padding-bottom: 143px;
+    margin-bottom: 43px;
 }
 .block08__review{
     float: left;
@@ -303,11 +314,14 @@
 .block08__review1{
     background: #97B13C;
     border-radius: 9px;
-    width: 209.81px;
+    max-width: 210px;
     margin-top: 89px;
 }
+.block08__review1 img{
+    width: 100%;
+    border-radius: 8px 8px 0px 0px;
+}
 .block08__bg1{
-    background: url("../images/review1.jpg");
     border-radius: 9px 9px 0px 0px;
     width: 210px;
     height: 153px;
@@ -338,6 +352,8 @@
     font-size: 10px;
     line-height: 1.3;
     color: #FFFFFF;
+    max-width: 186px;
+    padding-bottom: 22px;
 }
 .block08__descr1{
     max-width: 186px;
@@ -367,7 +383,6 @@
     margin-bottom: 52px;
 }
 .block08__bg2{
-    background: url("../images/review2.jpg");
     width: 245px;
     height: 178px;
     left: 441px;
@@ -439,19 +454,34 @@
     box-shadow: 8px 9px 39px rgba(185, 185, 185, 0.37);
     border-radius: 20px;
     max-width: 767px;
-    margin-left: 174px;
-    margin-right: 183px;
+    margin-left: auto;
+    margin-right: auto;
     margin-bottom: 61px;
     overflow: hidden;
-    width: 100%;
+}
+.block09__row{
+    display: flex;
+}
+.block09__left{
+    flex: 0 0 50%;
+    background: url("../images/block9.jpg") no-repeat center / cover;
+    position: relative;
+}
+.block09__left::after{
+    content: "";
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    background: linear-gradient(270deg, #FFFFFF 12.2%, rgba(30, 30, 30, 0) 107.85%);
+}
+.block09__rigth{
+    flex: 0 0 50%;
+    padding: 25px 15px;
 }
 .block09__dscr{
     max-width: 344px;
-    margin: 31px 42px 33px 381px;
-    width: 100%;
-}
-.block09__bg{
-    background:linear-gradient(270deg, #FFFFFF 12.2%, rgba(30, 30, 30, 0) 107.85%);  
 }
 .block09__text1{
     margin-bottom: 20px;
@@ -460,6 +490,7 @@
     font-size: 25px;
     line-height: 1.3;
     color: #A3CC40;
+    width: 100%;
 }
 .block09__text2-name{
     margin-bottom: 33px;
@@ -471,6 +502,8 @@
     line-height: 1.3;
     color: #A1A1A1;
     border: #A1A1A1 ;
+    width: 100%;
+    padding: 12px 0px 12px 16px;
 }
 .block09__text3-places{
     margin-bottom: 30px;
@@ -478,6 +511,8 @@
     border-radius: 5px;
     border: #A1A1A1;
     color: #A1A1A1;
+    width: 100%;
+    padding: 10px 0px 10px 16px;
 
 }
 .block09__text4-review{
@@ -489,7 +524,9 @@
     color: #A1A1A1;
     background: #DEDEDE;
     border-radius: 5px;
-    border: #A1A1A1
+    border: #A1A1A1;
+    width: 100%;
+    padding: 13px 0px 87px 16px;
 
 }
 .block09__text5{
@@ -512,72 +549,75 @@
     line-height: 1.3;
     color: #FFFFFF;
     border: #A3CC40;
+    width: 100%;
+    padding: 15px 32px 15px 32px;
 }
 .block10{
     margin: 0 auto;
     max-width: 973px;
 }
-.block11{
+
+.block__footer{
+    overflow: hidden;
     width: 100%;
     background: #A3CC40 no-repeat center;
 }
-.block11__footer{
-    overflow: hidden;
-    position: relative;
-}
-.block11__logo{
+.block__footer-logo{
     display: block;
     max-width: 161px;
     margin-bottom: 15px;
 }
-.block11__text1{
+.block__footer-text1{
     max-width: 269px;
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
     line-height: 1.3;
     color: #FFFFFF;
-    margin-bottom: 150px;
+  
 
 }
-.block11__col1{
-    margin-left: 80px;
-    display: inline-block;
+.block__footer-col1{
+    margin-bottom: 25px;
+    box-sizing: border-box;
+    padding: 0 25px;
+    flex: 50%;
+    
 }
-.block11__col2{
-    max-width: 111px;
-    margin-left: 171px;
-    display: inline-block;
-    position: absolute;
-    margin-top: 84px;
+.block__footer-col2{
+    margin-bottom: 102px;
+    padding: 0 25px;
+    flex: 25%;
+    box-sizing: border-box;
+    margin-top: 54px;
 }
-.block11__col3{
-    display: inline-block;
-    margin-left: 690px;
-    margin-right: 209px;
-    margin-top: 84px;
-    position: absolute;
+.block__footer-col3{
+    margin-bottom: 86px;
+    box-sizing: border-box;
+    padding: 0 25px;
+    flex: 25%;
+    margin-top: 54px;
 }
-.block11__saite{
+.block__footer-saite{
     margin-bottom: 22px;
     font-style: normal;
     font-weight: bold;
     font-size: 20px;
-    line-height: 26px;
+    line-height: 1.3;
     color: #FFFFFF;
 }
-.block11__saite-href li {
+.block__footer-saite-href li {
     margin-bottom: 12px;
     max-width: 111px;
 }
-.block11__saite-white{
+.block__footer-saite-white{
     font-style: normal;
     font-weight: 500;
     font-size: 12px;
     line-height: 16px;
     color: #FFFFFF;
 }
-.block11_contact{
+.block__footer-contact{
     margin-bottom: 22px;
     font-style: normal;
     font-weight: bold;
@@ -585,16 +625,48 @@
     line-height: 1.3;
     color: #FFFFFF;
 }
-.block11__white{
+.block__footer-white{
     font-style: normal;
     font-weight: 500;
     font-size: 12px;
     line-height: 1.3;
     color: #FFFFFF;
 }
-.block11__info li{
+.block__footer-info li{
    margin-bottom: 12px;
 }
+.block__footer-copyright{
+    font-style: normal;
+    font-weight: normal;
+    font-size: 15px;
+    line-height: 1.3;
+    color: #FFFFFF;
+    max-width: 436px;
+    margin-bottom: 12px;
+}
+.body{
+    font-family: 'IBM-Plex-Sans',sans-serif;
+}
+.social__groop{
+  display: inline-block;
+  margin-bottom: 42px;
+}
+.social__groop li{
+    margin-right: 31px;
+    display: inline-block;
 
+}
+.social__groop img{
+    border-radius: 50%;
+    width: 31px;
+    
+}
+.block__footer-wrap{
+    margin-right: -25px;
+    margin-left: -25px;
+    overflow: hidden;
+    display: flex;
+
+}
 
 
