--- a/css/Components.css
+++ b/css/Components.css
@@ -43,7 +43,7 @@
 .container3{
     max-width: 850px;
     margin: 0 auto;
-    padding: 0 15px;
+    padding: 0 0.75rem;
 }
 .table__checkbox input{
     display: none;
@@ -64,19 +64,19 @@ th {
     color: #FFFFFF;
     font-family: 'IBM-Plex-Sans',sans-serif;
     font-weight: 600;
-    padding: 9px 0px 10px 39px;
+    padding: .45rem 0rem .5rem 1.95rem;
     background: #A3CC40;
-    font-size: 20px;
-    line-height: 26px;
+    font-size: 1rem;
+    line-height: 1.3;
     text-align: left;
 }
 
 td {
     font-weight: 400;
-    font-size: 14px;
-    line-height: 18px;
+    font-size: 0.7rem;
+    line-height: 1.3;
     font-family: 'IBM-Plex-Sans',sans-serif;
-    padding: 18px 2px 18px 39px;
+    padding: .9rem .1rem .9rem 1.95rem;
     color: #FFFFFF;
 }
 
@@ -87,41 +87,41 @@ tr {
     
 .line2{
     display: inline block;
-    margin-right: 44px;
-    margin-bottom: 15px;
-    line-height: 15.6px;
+    margin-right: 1.8rem;
+    margin-bottom: 0.75rem;
+    line-height: 1.3;
     color: white;
     text-transform: uppercase;
-   
+    transition: 0.5s;
 }
-.line2 a:hover{
-    transition: 1s;
-    border-bottom: 1px solid white;
+.line2:hover{
+    color: #A3CC40;
 }
 .line1{
-    display: inline-block;
-    margin-right: 50px;
-    line-height: 15.6px;
-    margin-bottom: 15px;
+    line-height: 0.75rem;
+    transition: 0.5s;
+}
+.line1:hover{
+    color: #A3CC40;
 }
 
 .zagolovok1{
     margin: 0 auto;
-    padding-bottom: 19px;
+    padding-bottom: 0.95rem;
     text-align: center;
-    margin-top: 131px;
+    margin-top: 6.55rem;
 }
 .block03__text1{
-    margin-bottom: 25px;
+    margin-bottom: 1.25rem;
     font-weight: 600;
-    font-size: 20px;
-    line-height: 26px;
+    font-size: 1rem;
+    line-height: 1.3;
 }
 .block03__text2{
     font-weight: normal;
-    font-size: 11px;
-    line-height: 14px;
+    font-size: 10.55rem;
+    line-height: 1.3;
 }
 .block03__jpg{
-    margin-bottom: 35px;
+    margin-bottom: 1.75rem;
 }
