--- a/css/font.css
+++ b/css/font.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'IBM-Plex-Sans';
-    src: url('../font/IBMPlexSans-Light.ttf');
+    src: url('../font/IBMPlexSans-Thin.ttf');
     font-style: normal;
     font-weight: 100;
 }
