--- a/css/main.css
+++ b/css/main.css
@@ -1,14 +1,55 @@
+html{
+    font-size: 20px;
+}
 .link-white{
     display: inline-block;
     color: #FFFFFF;
     font-weight: 500;
-    font-size: 12px;
-    line-height: 16px;
+    font-size:0.6rem;
+    line-height: 1.3;
 }
-.block01__menu{
-    width: 850px;
-    margin-left: 200px;
-    
+.block01{
+    margin-right: -25px;
+    margin-left: -25px;
+    overflow: hidden;
+
+}
+.block01__header{
+    overflow: hidden;
+    padding: 0 1.25rem;
+}
+.block01__logo svg{
+    width: 7.8rem;
+    height:2rem;
+}
+.block01__logo{
+    display: block;
+    float: left;
+    box-sizing: border-box;
+    width: 20%;
+
+}
+.block01__info{
+    display: block;
+    float: left;
+    box-sizing: border-box;
+    padding:0.25rem 0 0;
+    width: 80%;
+    padding-top: 2.55rem;
+
+
+}
+
+.block01__menu  li{
+    display: inline-block;
+    list-style-type: none;
+    font-size: 0.55rem;
+    line-height: 2.4; 
+    margin-right: 1.8rem;
+}
+.line1:last-child{
+    float: right;
+    margin-right: 0;
 }
 .block02__wrap{
     position: relative;
@@ -28,23 +69,23 @@
 .block02__text1{
     font-style: normal;
     font-weight: 600;
-    font-size: 33px;
+    font-size: 1.65rem;
     line-height: 1.3;
     color: #333333;
-    margin-bottom: 22px;
+    margin-bottom: 1.1rem;
     
 }
 .block02__text2{
     font-style: normal;
     font-weight: normal;
-    font-size: 11px;
+    font-size: 0.55rem;
     line-height:1.3;
     color: #333333;
-    margin-bottom: 30px;
+    margin-bottom: 1.5rem;
 }
 .block02__descr{
-    padding-left: 47px;
-    padding-right: 47px;
+    padding-left: 2.35rem;
+    padding-right: 2.35rem;
     max-width: 332px;
 }
 .container{
@@ -68,16 +109,17 @@
 .container__container1{
     width: 947px;
     margin: 0 auto;
+    padding: 0 1.25;
 }
 .link-call{
-    padding: 2px 7px 3px 8px;
+    padding:0.1rem 0.35rem 0.15rem 0.4rem;
     border-radius: 6px;
     border: 2px;
     background: white;
     width: 130px;
+    transition: 1s;
 }
 .link-call:hover{
-    transition: 1s;
     background: #A3CC40;
     border-bottom: 1px; color: #FFFFFF;
 
@@ -88,17 +130,17 @@
     box-sizing: border-box;
     width: 33.33%;
     text-align: center;
-    padding: 0 24px;
-    margin-bottom: 29px;
+    padding: 0 1.2rem;
+    margin-bottom: 1.45rem;
 }
 .block03{
-    margin-right: -25px;
-    margin-left: -25px;
+    margin-right: -1.25rem;
+    margin-left: -1.25rem;
     overflow: hidden;
-    margin-bottom: 144px;
+    margin-bottom: 7.2rem;
 }
 .block05{
-    margin-bottom: 90px;
+    margin-bottom: 4.5rem;
     background:url("../images/presentblackout.jpg") no-repeat center / cover;
     overflow: hidden;
    
@@ -106,7 +148,7 @@
 .block05::before{
     content: "";
     display: block;
-    border-top: 100px solid white;
+    border-top: 5rem solid white;
     border-right: 100vw solid transparent;
     top: 0;
     left: 0;
@@ -114,44 +156,43 @@
 .block05::after{
     content: "";
     display: block;
-    border-bottom: 100px solid white;
-    border-left: 100vw solid transparent;
+    border-bottom: 14rem solid white;
+    border-left: 221vw solid transparent;
 }
 .block05__text1{
     font-weight: 500;
-    font-size: 48px;
+    font-size: 2.4rem;
     line-height: 1.3;
-    
     color: white;
-    margin-bottom: 38px;
+    margin-bottom: 1.9rem;
 }
 .block05__text2{
     font-weight: 400;
-    font-size: 11px;
+    font-size: .55rem;
     line-height: 1.3;
     color: white;
-    margin-bottom: 26px;
+    margin-bottom: 1.3rem;
 }
 .block05__text3{
     background: #A3CC40;
     border-radius: 6px;
     color: #FFFFFF;
     font-weight: 500;
-    font-size: 14px;
+    font-size: .7rem;
     line-height: 1.3;
     align-items: center;
     text-align: center;
     border: #A3CC40;
-    padding: 6px 18px 7px 18px;
+    padding: .3rem .9rem .35rem .9rem;
+    transition: 1s;
 }
 .block05__text3:hover{
-    transition: 1s;
     background: white;
     color:#A3CC40 ;
 
 }
 .block05__descr{
-    padding: 80px 0;
+    padding: 4rem 0;
     max-width: 550px;
     margin-left: auto;
     text-align: right;
@@ -160,7 +201,7 @@
 .container3{
     max-width: 850px;
     margin: 0 auto;
-    padding: 0 15px;
+    padding: 0 .75rem;
 }
 .block-present__wrap{
     position: relative;
@@ -176,12 +217,12 @@
     margin-bottom: 79px;
 }
 .films__text{
-    margin-bottom: 64px;
+    margin-bottom: 3.95rem;
     max-width: 548px;
     font-style: normal; 
     font-weight: normal;
-    font-size: 11px;
-    line-height: 14px;
+    font-size: .55rem;
+    line-height: 1.3;
     color: #333333;
 
 }
@@ -221,21 +262,21 @@
     top: 0;
     bottom: 0;
     background: rgba(144, 210, 61, 0.4);
-    padding: 22px;
+    padding: 1.1rem;
     transform: translate(100%);
     
 }
 .block06__text2{
     font-weight: normal;
-    font-size: 11px;
+    font-size: .55rem;
     line-height: 1.27;
     color:  #FFFFFF;
-    margin-bottom: 13px;
+    margin-bottom: .65rem;
     
 }
 .block06__text1{
     font-weight: 600;
-    font-size: 29px;
+    font-size: 1.45rem;
     line-height: 1.3;
     color:  #FFFFFF;
 
@@ -249,7 +290,7 @@
     position: relative;
     overflow: hidden;
     box-sizing: border-box;
-    padding: 0 25px
+    padding: 0 1.25rem;
 }
 .block07__common{
     position: absolute;
@@ -271,23 +312,21 @@
 .block07__abs{
     color:  #FFFFFF;
     font-weight: 600;
-    font-size: 20px;
+    font-size: 1rem;
     line-height: 1.3;
     text-align: center;
-    padding: 250px 30px 30px;
+    padding: 12.5rem 1.5rem 1.5rem;
     position: relative;
 }
 .block07__goods{
     overflow: hidden;
-    margin-bottom: 50px;
+    margin-bottom: 2.5rem;
 }
 .block07__text1{
-    margin-bottom: 37px;
     font-weight: normal;
-    font-size: 11px;
+    font-size: .55rem;
     line-height: 1.3;
-    min-width: 548px;
-    margin-bottom: 57px;
+    margin-bottom: 2.85rem;
     max-width: 548px;
 }
 .block07__item img{
@@ -297,19 +336,19 @@
     position: relative;
 }
 .block07__list{
-    margin-right: -25px;
-    margin-left: -25px;
+    margin-right: -1.25rem;
+    margin-left: -1.25rem;
 }
 .block08{
     background: url("../images/Group43.jpg") no-repeat center / cover;
     overflow: hidden;
     position: relative;
-    padding-bottom: 143px;
-    margin-bottom: 43px;
+    padding-bottom: 7.15rem;
+    margin-bottom: 2.15rem;
 }
 .block08__review{
     float: left;
-    padding: 0 30px;
+    padding: 0 1.5rem;
 }
 .block08__review1{
     background: #97B13C;
@@ -323,19 +362,19 @@
 }
 .block08__bg1{
     border-radius: 9px 9px 0px 0px;
-    width: 210px;
-    height: 153px;
+    max-width: 210vw;
+    max-height: 153vh;
     left: 142px;
     top: 4880px;
-    margin-bottom: 17px;
+    margin-bottom: .85rem;
 }
 .block08__text1{
     font-style: normal;
     font-weight: normal;
-    font-size: 11px;
-    line-height: 14px;
+    font-size: .55rem;
+    line-height: 1.3;
     color: #FFFFFF;
-    margin-bottom: 75px;
+    margin-bottom: 3.75rem;
     max-width: 548px;
 }
 .block08__text2{
@@ -456,7 +495,7 @@
     max-width: 767px;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 61px;
+    margin-bottom: 3.05rem;
     overflow: hidden;
 }
 .block09__row{
@@ -478,64 +517,67 @@
 }
 .block09__rigth{
     flex: 0 0 50%;
-    padding: 25px 15px;
+    padding: 1.25rem .75rem;
 }
 .block09__dscr{
     max-width: 344px;
 }
 .block09__text1{
-    margin-bottom: 20px;
+    margin-bottom: 1rem;
     font-style: normal;
     font-weight: 500;
-    font-size: 25px;
+    font-size: 1.25rem;
     line-height: 1.3;
     color: #A3CC40;
     width: 100%;
 }
 .block09__text2-name{
-    margin-bottom: 33px;
+    margin-bottom: 1.65rem;
     background: #DEDEDE;
     border-radius: 5px;
     font-style: normal;
     font-weight: normal;
-    font-size: 15px;
+    font-size: .75rem;
     line-height: 1.3;
     color: #A1A1A1;
     border: #A1A1A1 ;
     width: 100%;
-    padding: 12px 0px 12px 16px;
+    padding: .6rem 0rem 1.6rem .8rem;
+    box-sizing: border-box
 }
 .block09__text3-places{
-    margin-bottom: 30px;
+    margin-bottom: 1.5rem;
     background: #DEDEDE;
     border-radius: 5px;
     border: #A1A1A1;
     color: #A1A1A1;
     width: 100%;
-    padding: 10px 0px 10px 16px;
+    padding: .5rem 0px 1.5rem .8rem;
+    box-sizing: border-box;
 
 }
 .block09__text4-review{
-    margin-bottom: 29px;
+    margin-bottom: 1.45rem;
     font-style: normal;
     font-weight: normal;
-    font-size: 15px;
+    font-size: .75rem;
     line-height: 1.3;
     color: #A1A1A1;
     background: #DEDEDE;
     border-radius: 5px;
     border: #A1A1A1;
     width: 100%;
-    padding: 13px 0px 87px 16px;
+    padding: 1.65rem 0rem 4.35rem 1.8rem;
+    box-sizing: border-box;
 
 }
 .block09__text5{
-    margin-bottom: 48px
+    margin-bottom: 2.4rem;
 }
 .block09__text5-chekbox{
     font-style: normal;
     font-weight: normal;
-    font-size: 10px;
+    font-size: .5rem;
     line-height: 1.3;
     color: #333333;
     border: #A1A1A1
@@ -545,12 +587,17 @@
     border-radius: 6px;
     font-style: normal;
     font-weight: 500;
-    font-size: 20px;
+    font-size: 1rem;
     line-height: 1.3;
     color: #FFFFFF;
     border: #A3CC40;
     width: 100%;
-    padding: 15px 32px 15px 32px;
+    padding: .75rem 1.6rem .75rem 1.6rem;
+    transition: 0.5s;
+}
+.block09__text6:hover {
+    background: white;
+    color: #A3CC40;
 }
 .block10{
     margin: 0 auto;
@@ -565,107 +612,136 @@
 .block__footer-logo{
     display: block;
     max-width: 161px;
-    margin-bottom: 15px;
+    margin-bottom: .75rem;
 }
 .block__footer-text1{
     max-width: 269px;
     font-style: normal;
     font-weight: normal;
-    font-size: 14px;
+    font-size: .7rem;
     line-height: 1.3;
     color: #FFFFFF;
   
 
 }
 .block__footer-col1{
-    margin-bottom: 25px;
+    margin-bottom: 1.25rem;
     box-sizing: border-box;
-    padding: 0 25px;
+    padding: 0 1.25rem;
     flex: 50%;
     
 }
 .block__footer-col2{
-    margin-bottom: 102px;
-    padding: 0 25px;
+    margin-bottom: 5.1rem;
+    padding: 0 1.25rem;
     flex: 25%;
     box-sizing: border-box;
-    margin-top: 54px;
+    margin-top: 2.7rem;
 }
 .block__footer-col3{
-    margin-bottom: 86px;
+    margin-bottom: 4.3rem;
     box-sizing: border-box;
-    padding: 0 25px;
+    padding: 0 1.25rem;
     flex: 25%;
-    margin-top: 54px;
+    margin-top: 2.7rem;
 }
 .block__footer-saite{
-    margin-bottom: 22px;
+    margin-bottom: 1.1rem;
     font-style: normal;
     font-weight: bold;
-    font-size: 20px;
+    font-size: 1rem;
     line-height: 1.3;
     color: #FFFFFF;
+    transition: 0.5s;
 }
 .block__footer-saite-href li {
-    margin-bottom: 12px;
+    margin-bottom: .6rem;
     max-width: 111px;
 }
 .block__footer-saite-white{
+    transition: 0.5s;
+}
+.block__footer-saite-white:hover {
+    background: #DCDCDC;
+    border-bottom: 1px solid white;
+    max-width: 119px;
+}
+
+.block__footer-saite-white{
     font-style: normal;
     font-weight: 500;
-    font-size: 12px;
-    line-height: 16px;
+    font-size: .6rem;
+    line-height: 1.3;
     color: #FFFFFF;
 }
 .block__footer-contact{
-    margin-bottom: 22px;
+    margin-bottom: 1.1rem;
     font-style: normal;
     font-weight: bold;
-    font-size: 20px;
+    font-size: 1rem;
     line-height: 1.3;
     color: #FFFFFF;
 }
 .block__footer-white{
     font-style: normal;
     font-weight: 500;
-    font-size: 12px;
+    font-size: .6rem;
     line-height: 1.3;
     color: #FFFFFF;
+    transition: 0.5s;
 }
 .block__footer-info li{
-   margin-bottom: 12px;
+   margin-bottom: .6rem;
+   
+}
+.block__footer-white:hover {
+    background: #DCDCDC;
+    border-bottom: 1px solid white;
+    max-width: 119px;
 }
 .block__footer-copyright{
     font-style: normal;
     font-weight: normal;
-    font-size: 15px;
+    font-size: .75rem;
     line-height: 1.3;
     color: #FFFFFF;
     max-width: 436px;
-    margin-bottom: 12px;
+    margin-bottom: .6rem;
 }
 .body{
     font-family: 'IBM-Plex-Sans',sans-serif;
 }
 .social__groop{
   display: inline-block;
-  margin-bottom: 42px;
+  margin-bottom: 2.1rem;
 }
 .social__groop li{
-    margin-right: 31px;
+    margin-right: 1.55rem;
     display: inline-block;
 
 }
-.social__groop img{
-    border-radius: 50%;
-    width: 31px;
-    
-}
 .block__footer-wrap{
-    margin-right: -25px;
-    margin-left: -25px;
+    margin-right: -1.25rem;
+    margin-left: -1.25rem;
     overflow: hidden;
     display: flex;
+
+}
+.social__groop-net{
+    width: 31px;
+    height: 31px;
+    display: flex;
+    border-radius: 100px;
+    align-items: center;
+    justify-content: center;
+    background: #BEE956;
+}
+.social__groop-net svg{
+    fill: white;
+    transition: 0.5s;
+}
+.social__groop-net:hover svg{
+    fill:gray;
 
 }
 
