--- a/css/style.css
+++ b/css/style.css
@@ -8,26 +8,18 @@ a {
     text-decoration: none;
 
 }
-
-.block01__menu li{
-    display: inline-block;
-    list-style-type: none;
-    font-size: 12px;
-    line-height: 1.33;
-   
-}
 .zagolovok1 h1{
     font-family: 'IBM-Plex-Sans',sans-serif;
     font-weight: 100;
-    font-size: 68px;
-    line-height: 1.3;
+    font-size: 3.4rem;
+    line-height: 0.8;
     color:  #FFFFFF;
 }
 .zagolovok1__podzog{
     font-family: 'IBM-Plex-Sans',sans-serif;
     font-weight: normal;
-    font-size: 41px;
-    line-height:1.3;
+    font-size: 2.05rem;
+    line-height: 2.4;
     color:  #FFFFFF;
 }
 
@@ -40,15 +32,15 @@ a {
 }
 
 p {
-    font-size: 11px;
-    line-height: 14px;
+    font-size: .55rem;
+    line-height: 1.3;
     text-align: center;
     color: #333333;
 
 }
 body{
     font-family: "IBM-Plex-Sans" ,sans-serif;
-    font-style: normal;
+   
     
 }
 
