--- a/css/Components.css
+++ b/css/Components.css
@@ -14,19 +14,19 @@
     transform: rotate(180deg);
 }
 .movie-table__row-zero {
-    border-radius: 10px 0px 0px 0px;  
+    border-radius: .5rem 0px 0px 0px;  
 }
 
 .movie-table__row-cell-3 {
-    border-radius: 0px 10px 0px 0px;
+    border-radius: 0px .5rem 0px 0px;
 }
 
 .radius {
-    border-radius: 0px 0px 0px 10px;
+    border-radius: 0px 0px 0px .5rem;
 }
 
 .col2-3 {
-    border-radius: 0px 0px 10px 0px;
+    border-radius: 0px 0px .5rem 0px;
 }
 .start{
    color: #FFFFFF;
@@ -41,7 +41,7 @@
     fill: #A3CC40;;
 }
 .container3{
-    max-width: 850px;
+    max-width: 42.5rem;
     margin: 0 auto;
     padding: 0 0.75rem;
 }
@@ -98,7 +98,6 @@ tr {
     color: #A3CC40;
 }
 .line1{
-    line-height: 0.75rem;
     transition: 0.5s;
 }
 .line1:hover{
@@ -109,7 +108,7 @@ tr {
     margin: 0 auto;
     padding-bottom: 0.95rem;
     text-align: center;
-    margin-top: 6.55rem;
+    margin-top: 6.99rem;
 }
 .block03__text1{
     margin-bottom: 1.25rem;
