--- a/css/layout.css
+++ b/css/layout.css
@@ -1,10 +1,10 @@
 h2,h3,h4,h5,h6 {
     font-family: 'IBM-Plex-Sans',sans-serif;
     font-weight: 500;
-    font-size: 48px;
-    line-height: 62px;
+    font-size: 2.4rem;
+    line-height: 3.1;
     color: #A3CC40;
-    margin-bottom: 84px;
+    margin-bottom: 1.2rem;
  
     
 
