--- a/css/style.css
+++ b/css/style.css
@@ -19,22 +19,21 @@ a {
     font-family: 'IBM-Plex-Sans',sans-serif;
     font-weight: normal;
     font-size: 2.05rem;
-    line-height: 2.4;
+    line-height: 2.2;
     color:  #FFFFFF;
 }
 
 .logo {
-    width: 156px;
-    height: 40px;
-    margin-top: 51px;
-    margin-right: 44px;
+    width: 7.8rem;
+    height: 2rem;
+    margin-top: 2.55rem;
+    margin-right: 2.2rem;
    
 }
 
 p {
     font-size: .55rem;
     line-height: 1.3;
-    text-align: center;
     color: #333333;
 
 }
