--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 html{
-    font-size: 20px;
+    font-size: 1.41vw;
 }
 .link-white{
     display: inline-block;
@@ -16,25 +16,23 @@ html{
 }
 .block01__header{
     overflow: hidden;
-    padding: 0 1.25rem;
+    padding: 0 1.15rem;
+    display: flex;
 }
 .block01__logo svg{
     width: 7.8rem;
     height:2rem;
 }
 .block01__logo{
-    display: block;
-    float: left;
+    flex-basis: 20%;
     box-sizing: border-box;
-    width: 20%;
+   
 
 }
 .block01__info{
-    display: block;
-    float: left;
+    flex-basis: 80%;
     box-sizing: border-box;
     padding:0.25rem 0 0;
-    width: 80%;
     padding-top: 2.55rem;
 
 
@@ -134,18 +132,30 @@ html{
 }
 
 .row1{
-    float: left;
     box-sizing: border-box;
     width: 33.33%;
     text-align: center;
     padding: 0 1.2rem;
     margin-bottom: 1.45rem;
 }
+.row1 img{
+    max-width: 100%;
+}
 .block03{
     margin-right: -1.25rem;
     margin-left: -1.25rem;
     overflow: hidden;
     margin-bottom: 7.2rem;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+.block04{
+    margin-bottom: 5.35rem;
+}
+.block04 p{
+    margin: 1.7rem auto 0;
+    max-width: 27rem;
 }
 .block05{
     margin-bottom: 4.5rem;
@@ -224,8 +234,11 @@ html{
     max-width: 15.1rem;
 }
 .block06{
+    display: flex;
+    flex-wrap: wrap;
     overflow: hidden;
     margin-bottom: 3.95rem;
+    flex-direction: row;
 }
 .films__text{
     margin-bottom: 1.5rem;
@@ -237,14 +250,14 @@ html{
     color: #333333;
 
 }
-.block06__bg{
-    float: left;
-    
+
+.block06__bg img{
+    max-width: 100%;
 }
 .block06__movie1{
+    flex-basis: 33.33%;
     position: relative;
     width: 33.33%;
-    float: left;
     overflow: hidden;
     cursor: pointer;
 }
@@ -565,6 +578,7 @@ html{
     width: 100%;
     padding: .5rem 0px .5rem .5rem;
     box-sizing: border-box;
+    font-size: .75rem;
 
 }
 .block09__text4-review{
@@ -614,7 +628,9 @@ html{
     margin: 0 auto;
     max-width: 48.65rem;
 }
-
+.block10 img{
+    max-width: 100%;
+}
 .block__footer{
     overflow: hidden;
     width: 100%;
