--- a/css/style.css
+++ b/css/style.css
@@ -8,14 +8,14 @@ a {
     text-decoration: none;
 
 }
-.zagolovok1 h1{
+.subject h1{
     font-family: 'IBM-Plex-Sans',sans-serif;
     font-weight: 100;
     font-size: 3.4rem;
     line-height: 0.8;
     color:  #FFFFFF;
 }
-.zagolovok1__podzog{
+.subtitle{
     font-family: 'IBM-Plex-Sans',sans-serif;
     font-weight: normal;
     font-size: 2.05rem;
