ТЗ-13-02 Адаптивная верстка

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 html{
     font-size: 1.31vw;
 }
+
 .link-white{
     display: inline-block;
     color: #FFFFFF;
@@ -113,7 +114,7 @@ html{
 }
 
 .container__container1{
-    width: 47.35rem;
+    max-width: 47.35rem;
     margin: 0 auto;
     padding: 0 1.25rem;
 }
@@ -137,7 +138,7 @@ html{
    
 }
 .row1 img{
-    max-width: 100%;
+    width: 100%;
 }
 .block03{
     display: grid;
@@ -207,7 +208,7 @@ html{
 
 }
 .block05__descr{
-    padding: 4rem 0;
+    padding: 4.8rem 0;
     max-width: 27.5rem;
     margin-left: auto;
     text-align: right;
@@ -246,7 +247,7 @@ html{
 }
 
 .block06__bg img{
-    max-width: 100%;
+    width: 100%;
 }
 .block06__movie1{
     position: relative;
@@ -356,7 +357,7 @@ html{
     margin-left: -1.25rem;
 }
 .block08{
-    background: url("../images/Group43.jpg") no-repeat center / cover;
+    background: url("../images/review.jpg") no-repeat center / cover;
     overflow: hidden;
     position: relative;
     padding-bottom: 7.15rem;
@@ -465,7 +466,7 @@ html{
     color: #FFFFFF;
 }
 .block08__bg3{
-    background: url("../images/review3.jpg");
+    background: url("../images/review.jpg");
     border-radius: .4rem .4rem 0rem 0rem;
     width: 10.5rem;
     height: 7.6rem;
