--- a/css/media.css
+++ b/css/media.css
@@ -1,15 +1,34 @@
 @media screen and (max-width:1200px) {
 
     html {
-        font-size: 1.31vw;
+        font-size: 2vw;
     }
     
 
+}
+@media screen and (max-width:1920px){
+    .close svg{
+        display: none;
+    }
 }
 
 @media screen and (max-width:800px) {
     html {
         font-size: 2vw;
+    }
+    .subject h1{
+        font-family: 'IBM-Plex-Sans',sans-serif;
+        font-weight: 100;
+        font-size: 2.3rem;
+        line-height: 1.8;
+        color:  #FFFFFF;
+    }
+    .subtitle{
+        font-family: 'IBM-Plex-Sans',sans-serif;
+        font-weight: normal;
+        font-size: 1.4rem;
+        line-height: 1.3;
+        color:  #FFFFFF;
     }
 
     .block01__mobile-menu {
@@ -21,12 +40,195 @@
         background: #fff;
         overflow: auto;
         z-index: 1000;
+        display: flex;
+        flex-direction: column-reverse;
     }
 
     .block01__mobile-menu_closed {
         transform: translateX(100%);
     }
 
+    .link-white {
+        color: #4C4D4F;
+    }
+
+    .line2 {
+
+        color: #4C4D4F;
+    }
+
+    .block01__menu1 li {
+        margin-left: 0;
+        margin-top: 1.5rem;
+        display: table;
+        font-size: 1rem;
+        line-height: 1.9;
+        color: #9B9B9B;
+        margin-bottom: .4rem;
+    }
+    .block01__menu2 li {
+        margin-left: 0;
+        display: table;
+        font-size: 1rem;
+        line-height: 1.9;
+        color: #4C4D4F;
+        margin-bottom: 1rem;
+    }
+    .block01__menu2{
+        flex: 50%;
+        margin-bottom: .2rem;
+    }
+    .block01__menu1{
+        flex: 50%;
+    }
+
+    .link-call {
+        order: 8;
+
+    }
+    .block03{
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .movie-table {
+        min-width: 900px;
+    }
+
+    .table-wrap {
+        overflow: auto;
+    }
+
+    .block06 {
+        grid-template-columns: 1fr 1fr;
+    }
+    .block06__descr{
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        background: rgba(144, 210, 61, 0.4);
+        padding: 1.1rem;
+        transform: translateY(65%);
+        
+    }
+    .block01__mobile-burger{
+        position: relative;
+        display: block;
+        width: 2.3rem;
+        height: .6rem;
+        margin-left: auto;
+    }
+    .block01__mobile-burger span{
+        position: absolute;
+        background-color: #fff;
+        left: 0;
+        height: 3px;
+        width: 2.3rem;
+        top: .53rem;
+    }
+    .block01__mobile-burger:before, 
+    .block01__mobile-burger:after{
+        content: "";
+        background-color: #fff;
+        position: absolute;
+        width: 100%;
+        height: 3px;
+    }
+    .block01__mobile-burger:before{
+        top: 0;
+    }
+    .block01__mobile-burger:after{
+        bottom: -.7rem;
+    }
+    .close svg{
+        position: absolute;
+        content: "";
+        display: block;
+        right: 1.15rem;
+        cursor: pointer;
+        overflow: hidden;
+        top: -7rem;
+        padding: .5rem;
+
+    }
+   
+    
+    
+    
+
+    }
+   
+
+
+
+@media screen and (max-width:550px) {
+    html {
+        font-size: 4vw;
+    }
+    .subject h1{
+        font-family: 'IBM-Plex-Sans',sans-serif;
+        font-weight: 100;
+        font-size: 1.75rem;
+        line-height: 2.2;
+        color:  #FFFFFF;
+    }
+    .subtitle{
+        font-family: 'IBM-Plex-Sans',sans-serif;
+        font-weight: normal;
+        font-size: 1rem;
+        line-height: 1.3;
+        color:  #FFFFFF;
+    }
+
+    .block01__mobile-menu{
+        position: fixed;
+        top: 0;
+        bottom: 0;
+        right: 0;
+        padding: 30px;
+        background: #fff;
+        overflow: auto;
+        z-index: 1000;
+        display: flex;
+        flex-direction: column-reverse;
+    }
+    .block01__menu2{
+        flex: 50%;
+        margin-bottom: .2rem;
+    }
+    .block01__menu1{
+        flex: 50%;
+    }
+    .block01__menu1 li {
+        margin-left: 0;
+        margin-top: 1.5rem;
+        display: table;
+        font-size: .8rem;
+        line-height: 1.1;
+        color: #9B9B9B;
+        margin-bottom: .4rem;
+    }
+    .block01__menu2 li {
+        margin-left: 0;
+        display: table;
+        font-size: .8rem;
+        line-height: 1.1;
+        color: #4C4D4F;
+        margin-bottom: 1rem;
+    }
+    .block01__mobile-menu_closed {
+        transform: translateX(100%);
+    }
+    .close svg {
+        position: absolute;
+        content: "";
+        display: block;
+        right: 2.45rem;
+        cursor: pointer;
+        overflow: hidden;
+        top: 1.2rem;
+    }
     .link-white {
         color: #4C4D4F;
     }
@@ -51,7 +253,21 @@
         order: 8;
 
     }
-
+    .block02{
+        position: relative;
+        background: #FFFFFF;
+        box-shadow: 0rem 1.35rem 1.95rem rgba(163, 204, 64, 0.18);
+        border-radius: .5rem;
+        min-height: 11.05rem;
+        min-width: 21.3rem;
+        right: 0;
+        top: 0;
+        transform: translateY(-77%);
+        margin-bottom: -5.1rem;
+    }
+    .block03{
+        grid-template-columns: 1fr;
+    }
     .movie-table {
         min-width: 900px;
     }
@@ -61,22 +277,33 @@
     }
 
     .block06 {
-        grid-template-columns: repeat(auto-fit, minmax(800px, 1fr));
+        grid-template-columns: 1fr;
+    }
+    .block06__descr{
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        background: rgba(144, 210, 61, 0.4);
+        padding: 1.1rem;
+        transform: translateY(65%);
+        
     }
     .block01__mobile-burger{
         position: relative;
         display: block;
-        width: 46px;
-        height: 13px;
-        transform: translateX(500px);
+        width: 1.6rem;
+        height: 2.2px;
+        margin-left: auto;
     }
     .block01__mobile-burger span{
         position: absolute;
         background-color: #fff;
         left: 0;
-        height: 3px;
-        width: 46px;
-        top: 9px;
+        height: 2.2px;
+        width: 1.6rem;
+        top: .45rem;
     }
     .block01__mobile-burger:before, 
     .block01__mobile-burger:after{
@@ -84,14 +311,83 @@
         background-color: #fff;
         position: absolute;
         width: 100%;
-        height: 3px;
+        height: 2.2px;
     }
     .block01__mobile-burger:before{
         top: 0;
     }
     .block01__mobile-burger:after{
-        bottom: -8px;
+        bottom: -.82rem;
     }
-   
-
+    .text{
+        font-family: 'IBM-Plex-Sans',sans-serif;
+        font-weight: 500;
+        font-size: 1.5rem;
+        line-height: 1.3;
+        color: #A3CC40;
+        margin-bottom: 1.2rem;
+     
+        
+    
+    }
+    .block02__text1{
+        font-size: 1.5rem;
+    }
+    .block05__text1{
+        font-weight: 500;
+        font-size: 1.5rem;
+        line-height: 1.3;
+        color: white;
+        margin-bottom: 1.9rem;
+    }
+    .block07__item{
+        float: none;
+        width: 100%;
+    }
+    .block07__bg{
+        top: 20rem;
+        bottom: -4.1rem;
+        transform: skew(0, -16deg);
+    
+    }
+    .block07__abs{
+        padding: 24.6rem 1.5rem 1.5rem;
+    }
+    .block09__left{
+        flex: 0 0 50%;
+        background: url("../images/block9.jpg") no-repeat center / cover;
+        position: relative;
+        display: none;
+    }
+    .block09__rigth{
+        flex: 0 0 100%;
+        padding: 1.25rem .75rem;
+    }
+    .block09__dscr{
+        max-width: 23.8rem;
+    }
+    .block__footer-col1{
+        flex: 33.33%;
+    }
+    .block__footer-col2{
+        flex: 33.33%;
+    }
+    .block__footer-col3{
+        flex: 33.33%;
+    }
+    .block__footer-wrap{
+        margin-right: -1.25rem;
+        margin-left: -1.25rem;
+        display: flex;
+        flex-direction: column-reverse;
+        overflow: auto;
+    
+    }
+    .block-present__img{
+        display: block;
+        border-radius: 100%;
+        position: absolute;
+        top: -1.95rem;
+        max-width: 9rem;
+    }
 }
